[IMP] Improove the odoo.conf file

--- a/odoo.conf
+++ b/odoo.conf
@@ -1,8 +1,45 @@
 [options]
-addons_path = /mnt/extra-addons,/usr/lib/python2.7/dist-packages/odoo/addons
+base = /opt/odoo
+stab = %(base)s/stable-addons
+
+aero = %(stab)s/aeroo_reports
+bmya = %(stab)s/bmya
+ocaa = %(stab)s/oca
+
+ochl = %(bmya)s/odoo-chl-tr
+repo = %(ocaa)s/reporting-engine
+srvt = %(bmya)s/server-tools
+
+xtra = /mnt/extra-addons
+# fixo = %(xtra)s/fixodoo
+# ocax = %(xtra)s/oca
+# them = %(xtra)s/themes
+# tgrm = %(xtra)s/odoo-telegram
+# serp = %(xtra)s/serpent
+# bmyx = %(xtra)s/bmya
+# yeli = %(xtra)s/yeli
+# tko = %(xtra)s/tko
+
+# oweb = %(ocax)s/web
+# ocrm = %(ocax)s/crm
+# prox = %(bmyx)s/product
+# maila = %(yeli)s/mail-addons
+# misca = %(yeli)s/misc-addons
+# social = %(ocax)s/social
+# surv = %(ocax)s/survey
+# cont = %(ocax)s/partner-contact
+
+addons_path = /usr/lib/python2.7/dist-packages/odoo/addons,%(xtra)s,%(ochl)s,%(repo)s,%(srvt)s
+
+
 data_dir = /var/lib/odoo
+server_wide_modules=web
+# ,mail_tracking
 auto_reload = True
-; admin_passwd = admin
+; db_host = db
+; db_user = odoo
+; db_password = odoo_db_pass
+admin_passwd = Y0Om8rMx7tRFbfJyiQfb
 ; csv_internal_sep = ,
 ; db_maxconn = 64
 ; db_name = False
@@ -13,8 +50,8 @@ auto_reload = True
 ; limit_memory_hard = 2684354560
 ; limit_memory_soft = 2147483648
 ; limit_request = 8192
-; limit_time_cpu = 60
-; limit_time_real = 120
+limit_time_cpu = 12000
+limit_time_real = 24000
 ; list_db = True
 ; log_db = False
 ; log_handler = [':INFO']
@@ -36,3 +73,4 @@ auto_reload = True
 ; xmlrpcs = True
 ; xmlrpcs_interface = 
 ; xmlrpcs_port = 8071
+proxy_mode = 1
