[IMP] autoinstall nice features from oca

--- a/odoo.conf
+++ b/odoo.conf
@@ -6,9 +6,18 @@ aero = %(stab)s/aeroo_reports
 bmya = %(stab)s/bmya
 ocaa = %(stab)s/oca
 
+crm = %(bmya)s/crm
+mra = %(bmya)s/margin-analysis
+och1 = %(bmya)s/odoo-chile
 ochl = %(bmya)s/odoo-chl-tr
-repo = %(ocaa)s/reporting-engine
+otlg = %(bmya)s/odoo-telegram
+prod = %(bmya)s/product-attribute
+repo = %(bmya)s/reporting-engine
 srvt = %(bmya)s/server-tools
+acci = %(ocaa)s/account-invoicing
+bksr = %(ocaa)s/bank-statement-reconcile
+know = %(ocaa)s/knowledge
+oweb = %(ocaa)s/web
 
 xtra = /mnt/extra-addons
 # fixo = %(xtra)s/fixodoo
@@ -29,7 +38,7 @@ xtra = /mnt/extra-addons
 # surv = %(ocax)s/survey
 # cont = %(ocax)s/partner-contact
 
-addons_path = /usr/lib/python2.7/dist-packages/odoo/addons,%(xtra)s,%(ochl)s,%(repo)s,%(srvt)s
+addons_path = /usr/lib/python2.7/dist-packages/odoo/addons,%(xtra)s,%(crm)s,%(mra)s,%(och1)s,%(ochl)s,%(otlg)s,%(prod)s,%(repo)s,%(srvt)s,%(acci)s,%(bksr)s,%(know)s,%(oweb)s
 
 
 data_dir = /var/lib/odoo
@@ -39,7 +48,7 @@ auto_reload = True
 ; db_host = db
 ; db_user = odoo
 ; db_password = odoo_db_pass
-admin_passwd = Y0Om8rMx7tRFbfJyiQfb
+admin_passwd = admin
 ; csv_internal_sep = ,
 ; db_maxconn = 64
 ; db_name = False
