--- a/conf/odoo.conf
+++ b/conf/odoo.conf
@@ -11,12 +11,13 @@ odcl = %(bmya)s/odoo-chile
 odcl1 = %(bmya)s/odoo-chl-tr
 srv = %(bmya)s/server-tools
 acinv = %(oca)s/account-invoicing
-bank = %(oca)s/bank-statement-reconcil
+bank = %(oca)s/bank-statement-reconcile
 know = %(oca)s/knowledge
 web = %(oca)s/web
 repe = %(oca)s/reporting-engine
+aft = %(stab)s/account-financial-tools/
 
-addons_path = %(xtra)s,/usr/lib/python2.7/dist-packages/odoo/addons,%(mrga)s,%(odar)s,%(odcl)s,%(odcl1)s,%(srv)s,%(acinv)s,%(bank)s,%(know)s,%(web)s,%(repe)s
+addons_path = %(xtra)s,/usr/lib/python2.7/dist-packages/odoo/addons,%(mrga)s,%(odar)s,%(odcl)s,%(odcl1)s,%(srv)s,%(acinv)s,%(bank)s,%(know)s,%(web)s,%(repe)s,%(aft)s,%(aft)s
 
 data_dir = /var/lib/odoo
 auto_reload = True
